docs/pages/versions/v55.0.0/sdk/ui/jetpack-compose/progress.mdx
---
title: 进度指示器
description: 用于显示操作状态的 Jetpack Compose 进度指示器组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

Expo UI 进度指示器与官方 Jetpack Compose [Progress Indicator API](https://developer.android.com/develop/ui/compose/components/progress) 保持一致。

## 安装

<APIInstallSection />

## 用法

### 线性进度

一个水平条，通过填充来指示进度。在确定模式下，提供一个介于 `0` 和 `1` 之间的 `progress` 值。

```tsx LinearExample.tsx
import { Host, LinearProgressIndicator } from '@expo/ui/jetpack-compose';

export default function LinearExample() {
  return (
    <Host matchContents>
      <LinearProgressIndicator progress={0.5} />
    </Host>
  );
}
```

### 圆形进度

一个旋转的圆，其描边会增长以指示进度。

```tsx CircularExample.tsx
import { Host, CircularProgressIndicator } from '@expo/ui/jetpack-compose';

export default function CircularExample() {
  return (
    <Host matchContents>
      <CircularProgressIndicator progress={0.75} />
    </Host>
  );
}
```

### 不确定进度

省略 `progress` 属性即可持续动画播放，而不显示具体完成程度。

```tsx IndeterminateExample.tsx
import {
  CircularProgressIndicator,
  CircularWavyProgressIndicator,
  Column,
  Host,
  LinearProgressIndicator,
  LinearWavyProgressIndicator,
} from '@expo/ui/jetpack-compose';

export default function IndeterminateExample() {
  return (
    <Host matchContents>
      <Column verticalArrangement={{ spacedBy: 16 }}>
        <LinearProgressIndicator />
        <CircularProgressIndicator />
        <CircularWavyProgressIndicator />
        <LinearWavyProgressIndicator />
      </Column>
    </Host>
  );
}
```

### 自定义颜色

使用 `color` 设置指示器颜色，使用 `trackColor` 设置背景轨道颜色。

```tsx ColorsExample.tsx
import { Host, CircularProgressIndicator } from '@expo/ui/jetpack-compose';

export default function ColorsExample() {
  return (
    <Host matchContents>
      <CircularProgressIndicator progress={0.6} color="red" trackColor="#cccccc" />
    </Host>
  );
}
```

### 波浪变体

`LinearWavyProgressIndicator` 和 `CircularWavyProgressIndicator` 添加了来自 Material 3 Expressive 的富有表现力的波浪动画。

```tsx WavyExample.tsx
import {
  Host,
  LinearWavyProgressIndicator,
  CircularWavyProgressIndicator,
  Column,
} from '@expo/ui/jetpack-compose';

export default function WavyExample() {
  return (
    <Host matchContents>
      <Column verticalArrangement={{ spacedBy: 16 }}>
        <LinearWavyProgressIndicator progress={0.6} />
        <CircularWavyProgressIndicator progress={0.6} />
      </Column>
    </Host>
  );
}
```

## API

```tsx
import {
  LinearProgressIndicator,
  CircularProgressIndicator,
  LinearWavyProgressIndicator,
  CircularWavyProgressIndicator,
} from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/progress" />
